# Mission-Control-2.0

./: .env.machines.example  .gitignore  .mcp.json  .rules  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  objectives  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  state
.claude/: settings.json
.claude/commands/: audit-drift.md  build-urdf.md  context-check.md  integrity-check.md  new-agent.md  run-evals.md  spec-update.md  update-hashes.md  validate-output.md
.claude/hooks/: pre_commit_claude_md.sh  pre_commit_full.sh  pre_commit_module_hashes.sh  pre_commit_spec_version.sh
.github/workflows/: ci.yml
agents/: CLAUDE.md
agents/audit/: prompt.md
agents/curob_config/: prompt.md
agents/launch_file/: output_schema.json  prompt.md
agents/scene_build/: prompt.md
agents/script_generation/: agent.py  prompt.md
agents/sensor_config/: prompt.md
agents/urdf_build/: prompt.md
agents/usd_conversion/: prompt.md
backend/: CLAUDE.md  main.py  pyproject.toml
backend/api/: agents.py  auth.py  builds.py  cloud.py  components.py  compute.py  configurations.py  containers.py  datasets.py  empirical.py  isaac.py  layouts.py  osmo.py  packages.py  pipelines.py  recordings.py  registry.py  robot_builder.py  ros2.py  stub_driver.py  users.py  workflows.py
backend/core/: compaction.py  context_budget.py  enforcement.py  integrity.py  prompt_loader.py  settings.py  validation_chain.py
backend/db/: session.py
backend/db/empirical/: models.py
backend/db/registry/: __init__.py  models.py
backend/integrity/: __init__.py  drift_score.py  intent_verifier.py  placeholder_scanner.py  scope_guard.py
backend/middleware/: auth.py
backend/rosbridge/: client.py
backend/services/: auth.py  cloud_storage.py  component_researcher.py  config_generator.py  file_validator.py  isaac_sim.py  llm_client.py  mcap_writer.py  oauth.py  osmo.py  osmo_bridge.py  pipeline_templates.py  robot_file_generator.py  stub_robot_driver.py
backend/workflow_engine/: executor.py  graph_parser.py  node_registry.py
backend/workflow_engine/nodes/: bag.py  condition.py  config.py  container.py  dataset.py  notify.py  sim.py  validate.py
database/: CLAUDE.md
database/empirical/: alembic.ini  env.py  seed_cr10.py
database/init/: 01-create-databases.sh
database/registry/: alembic.ini  env.py
deploy/: mission-control.service
deploy/osmo/: isaac-sim.yaml
docs/: AGENT_DESIGN.md  BEST_PRACTICES.md  CLAUDE.md  CONTEXT_ENGINEERING.md  GUARDRAILS.md  PRACTICES.md  SPEC.md
docs/plans/: 2026-03-01-mc-3d-viz-implementation.md  2026-03-01-mission-control-3d-viz-design.md  2026-03-02-foxglove-parity-design.md  2026-03-02-foxglove-parity-implementation.md  2026-03-02-naming-convention.md  2026-03-02-physical-ai-pipeline-design.md  2026-03-02-physical-ai-pipeline-implementation.md  2026-03-02-robot-builder-design.md  2026-03-02-robot-builder-implementation.md  2026-03-02-scene-builder-design.md  2026-03-02-scene-builder-implementation.md  2026-03-03-full-platform-audit-design.md  2026-03-03-full-platform-audit-plan.md  2026-03-03-osmo-integration-research.md  osmo-pipeline-integration.md
docs/reports/: 2026-03-03-platform-audit-results.md
evals/: CLAUDE.md
evals/fixtures/: golden_cases.py  mock_db.py
evals/mocks/: __init__.py  fixture_db.py
evals/runners/: run_evals.py
frontend/: .env  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/public/: nvidia-assets.json
frontend/src/: App.tsx  main.tsx
infrastructure/tailscale/: acl.json
prompts/: CLAUDE.md  module_hashes.json
prompts/tools/: container_agent.md  db_agent.md  (+1 more)
registry/: CLAUDE.md
scripts/: CLAUDE.md  check_spec_drift.py  compose_isaac_scene.py  drift_detector.py  enforce_practices.py  export_nucleus_assets.py  isaac-ros-start.sh  isaac-ros-stop.sh  register_cinema_assets.py  run_sprint_tests.py  seed_admin.py  setup_dev.sh  test_api_routers.py  usd_to_glb.py  validate_session.py
systemd/: isaac-ros.service
tests/: CLAUDE.md  conftest.py
(+175 files in other folders)
