[project]
name = "mission-control-backend"
version = "0.1.0"
description = "Mission Control — Cinema Robot Digital Twin Infrastructure Backend"
requires-python = ">=3.11"

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",

    # ROS2 WebSocket bridge client
    "websockets>=13.0",
    "roslibpy>=1.3.0",

    # Docker management
    "docker>=7.1.0",

    # Async task execution
    "anyio>=4.6.0",

    # Script validation
    "pylint>=3.3.0",

    # File operations
    "aiofiles>=24.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
