[project]
name = "mission-control-backend"
version = "0.1.0"
description = "Mission Control — Cinema Robot Digital Twin Infrastructure Backend"
requires-python = "==3.11.*"

# All versions pinned exactly (GUARDRAILS.md L3-R5).
# Source: GUARDRAILS.md L3-R5
dependencies = [
    # API
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",

    # Database
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",

    # ROS2 WebSocket bridge client
    "websockets==14.1",
    "roslibpy==1.7.0",

    # Docker management
    "docker==7.1.0",

    # Async task execution
    "anyio==4.12.1",

    # Script validation
    "pylint==3.3.3",

    # File operations
    "aiofiles==24.1.0",

    # Utilities
    "python-dotenv==1.0.1",
    "structlog==25.5.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
